@@ -1,3 +1,7 @@
+2002-11-15  Paul Brook  <paul@nowt.org>
+
+	* trans-array.c (g95_conv_array_parameter): Check for NULL stride.
+
 2002-10-31  Paul Brook  <paul@nowt.org>
 
 	* f95-tree.c: Remove tree copying stuff that's now in gimple.c
